# claude-brain

./: .gitignore  Cargo.toml  Makefile  README.md
crates/brain-app/: Cargo.toml  tauri.conf.json
crates/brain-app-frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
crates/brain-app-frontend/src/: api.rs  app.rs  lib.rs  main.rs  markdown.rs  models.rs  settings.rs  theme.rs
crates/brain-app-frontend/src/components/: entry_detail.rs  entry_list.rs  mod.rs  search_bar.rs  settings_dialog.rs  sidebar.rs  tag_badge.rs  type_icon.rs
crates/brain-app-frontend/src/components/hooks/: mod.rs
crates/brain-app-frontend/src/components/ui/: button.rs  checkbox.rs  dialog.rs  mod.rs  scroll_area.rs  select.rs  separator.rs  switch.rs
crates/brain-app-frontend/src/pages/: browse.rs  mod.rs  stats.rs
crates/brain-app-frontend/styles/: main.css
crates/brain-app-frontend/styles/themes/: catppuccin-mocha.css  cobalt2.css  dracula.css  nord.css  solarized-dark.css  tokyo-night.css
crates/brain-app/capabilities/: default.json
crates/brain-app/icons/: icon.icns
crates/brain-app/src/: commands.rs  main.rs  settings.rs  state.rs
crates/brain-core/: Cargo.toml
crates/brain-core/src/: db.rs  error.rs  lib.rs  models.rs  search.rs
crates/brain-mcp/: Cargo.toml
crates/brain-mcp/src/: main.rs  server.rs
docs/: DESKTOP.md  MCP.md
