[package]
name = "brain-app-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "brain-app-frontend"
path = "src/main.rs"

[lib]
name = "brain_app_frontend"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement",
    "MediaQueryList", "MediaQueryListEvent", "EventTarget",
    "VisibilityState", "KeyboardEvent", "Event",
] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
