[package]
name = "brain-app-frontend"
description = "Leptos WASM frontend for the claude-brain desktop app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "brain-app-frontend"
path = "src/main.rs"

[lib]
name = "brain_app_frontend"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement",
    "MediaQueryList", "MediaQueryListEvent", "EventTarget",
    "VisibilityState", "KeyboardEvent", "Event", "Storage",
] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
leptos_ui = "0.3"
tw_merge = "0.1"
leptos_icons = "0.7"
icondata = "0.7"

[package.metadata.leptos]
tailwind-input-file = "styles/main.css"
