[package]
name = "brain-mcp"
description = "MCP server for claude-brain: exposes the knowledge store to Claude Code"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "claude-brain"
path = "src/main.rs"

[dependencies]
brain-core = { path = "../brain-core" }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
dirs = "6"
